# FurnitureShop

./: .gitignore  Makefile  README.md  main.py  pyproject.toml  ruff.toml
app/app/: settings.py  urls.py
app/carts/: admin.py  mixins.py  models.py  utils.py  views.py
app/carts/migrations/: 0001_initial.py  0002_alter_cart_options.py
app/carts/templates/carts/includes/: included_cart.html
app/carts/templatetags/: carts_tags.py
app/fixtures/goods/: categories.json  prods.json  products.json
app/goods/: admin.py  models.py  utils.py  views.py
app/goods/migrations/: 0001_initial.py  0002_alter_products_options.py
app/goods/templates/goods/: catalog.html  product.html
app/main/: urls.py  views.py
app/main/templates/main/: about.html  base.html  index.html
app/orders/: admin.py  forms.py  models.py  views.py
app/orders/migrations/: 0001_initial.py
app/orders/templates/orders/: create_order.html
app/templates/: base.html
app/templates/includes/: cart_button.html  notifications.html
app/users/: admin.py  forms.py  models.py  views.py
app/users/migrations/: 0001_initial.py  0002_user_phone_number.py
app/users/templates/users/: login.html  profile.html  registration.html  users_cart.html
