[project]
name = "furnitureshop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.1.7",
    "pillow>=11.1.0",
    "ruff>=0.11.2",
    "django-debug-toolbar==5.1.0",
    "psycopg2>=2.9.10",
    "asgiref>=3.8.1",
    "asttokens>=3.0.0",
    "ipython>=9.0.2",
    "ipython-pygments-lexers>=1.1.1",
    "jedi>=0.19.2",
    "parso>=0.8.4",
    "pexpect>=4.9.0",
    "wcwidth>=0.2.13",
    "traitlets>=5.14.3",
]
